syntax = "proto3";

package mitosis.evmvalidator.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/mitosis-org/chain/x/evmvalidator/types";

// Validator defines a validator in the x/evmvalidator module
message Validator {
  // addr is the Ethereum address of the validator
  bytes addr = 1 [
    (gogoproto.customtype) = "github.com/mitosis-org/chain/types.EthAddress",
    (gogoproto.nullable) = false
  ];

  // pubkey is the compressed secp256k1 public key of the validator
  bytes pubkey = 2;

  // collateral is the amount of MITO used as a collateral (gwei unit)
  string collateral = 3 [
    (cosmos_proto.scalar) = "cosmos.Uint",
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];

  // extra_voting_power is additional voting power assigned to the validator
  // (gwei unit)
  string extra_voting_power = 4 [
    (cosmos_proto.scalar) = "cosmos.Uint",
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];

  // voting_power is the actual voting power used in consensus (calculated)
  int64 voting_power = 5;

  // jailed indicates if the validator is jailed
  bool jailed = 6;

  // bonded indicates if the validator is bonded (meaning it is in the active
  // validator set)
  bool bonded = 7;
}

// Withdrawal defines a withdrawal request
message Withdrawal {
  uint64 id = 1 [ (gogoproto.customname) = "ID" ];

  // val_addr is the Ethereum address of the validator
  bytes val_addr = 2 [
    (gogoproto.customtype) = "github.com/mitosis-org/chain/types.EthAddress",
    (gogoproto.nullable) = false
  ];

  // amount is the amount of collateral to withdraw (gwei unit)
  uint64 amount = 3;

  // receiver is the address that will receive the withdrawn collateral
  bytes receiver = 4 [
    (gogoproto.customtype) = "github.com/mitosis-org/chain/types.EthAddress",
    (gogoproto.nullable) = false
  ];

  // matures_at is the time when the withdrawal request matures
  int64 matures_at = 5;

  // creation_height is the height at which the withdrawal request was created
  int64 creation_height = 6;
}

// LastValidatorPower defines the last validator power used for validator set
// updates
message LastValidatorPower {
  // val_addr is the Ethereum address of the validator
  bytes val_addr = 1 [
    (gogoproto.customtype) = "github.com/mitosis-org/chain/types.EthAddress",
    (gogoproto.nullable) = false
  ];

  // power is the last voting power
  int64 power = 2;
}
